Added MDL markup

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -2,8 +2,8 @@
 $icon-font-path:        "../fonts/";
 
 // Grid settings
-$main-sm-columns:       12;
-$sidebar-sm-columns:    4;
+$grid-desktop-columns:       12;
+$grid-sidebar-columns:    4;
 
 // Colors
 $brand-primary:         #27ae60;
