--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -1,10 +1,13 @@
 // Grid system
 .main {
-  @include make-sm-column($main-sm-columns);
+  @extend .mdl-grid;
+  @include partial-size($grid-desktop-columns);
   .sidebar-primary & {
-    @include make-sm-column($main-sm-columns - $sidebar-sm-columns);
+    @extend .mdl-grid;
+    @include partial-size($grid-desktop-columns - $grid-sidebar-columns);
   }
 }
 .sidebar {
-  @include make-sm-column($sidebar-sm-columns);
+  @extend .mdl-layout__drawer;
+  @include partial-size($grid-sidebar-columns);
 }
